get_measurement_meta: initial implementation
