# measurements/api/__init__.py
@@ -2,4 +2,4 @@ from .private import api_private_blueprint
 
 from .measurements import get_version
 from .measurements import list_files
-from .measurements import list_measurements, get_measurement, get_aggregated
+from .measurements import list_measurements, get_measurement, get_aggregated, get_measurement_meta
